07-AKS/25-Calico-Netwok-Policy/calico_policy/policy.yaml
# kind: NetworkPolicy
# apiVersion: networking.k8s.io/v1
# metadata:
#   name: backend-policy
#   namespace: dev3
# spec:
#   podSelector:
#     matchLabels:
#       web: dev3
#   ingress:
#   - from:
#     - namespaceSelector:
#         matchLabels:
#           web: dev1
#   policyTypes:
#     - Ingress 

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: backend-policy
  namespace: dev2
spec:
  podSelector: {}
  ingress:
  - {}
  policyTypes:
    - Ingress
